WriteConcern.MAJORITY